--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -73,6 +73,8 @@
 		"i18next-browser-languagedetector": "^7.0.1",
 		"i18next-http-backend": "^2.2.0",
 		"jsx-to-string": "^1.4.0",
+		"nepali-datepicker-and-dateinput": "^1.0.4",
+		"nepali-datepicker-reactjs": "^1.1.5",
 		"pascalcase": "^2.0.0",
 		"payment": "^2.4.6",
 		"prismjs": "^1.29.0",
@@ -85,6 +87,8 @@
 		"react-date-range": "^1.4.0",
 		"react-dom": "^18.2.0",
 		"react-ga4": "^2.1.0",
+		"react-hook-form": "^7.43.9",
+		"react-hot-toast": "^2.4.0",
 		"react-i18next": "^12.2.0",
 		"react-image-webp": "^0.8.0",
 		"react-input-mask": "^2.0.4",
