--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -69,6 +69,7 @@
 		"dayjs": "^1.11.7",
 		"formik": "^2.2.9",
 		"framer-motion": "^10.9.2",
+		"history": "^5.3.0",
 		"i18next": "^22.4.13",
 		"i18next-browser-languagedetector": "^7.0.1",
 		"i18next-http-backend": "^2.2.0",
@@ -97,6 +98,7 @@
 		"react-notifications-component": "^4.0.1",
 		"react-number-format": "^5.1.4",
 		"react-popper": "^2.3.0",
+		"react-router": "^6.10.0",
 		"react-router-dom": "^6.9.0",
 		"react-router-hash-link": "^2.4.3",
 		"react-scrollspy": "^3.4.3",
